kubernetes/apps/default/homeassistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-network-application
spec:
  ports:
    - name: http
      port: 8123
      protocol: TCP
  selector:
    app: homeassistant
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant-network-application
  labels:
    app: homeassistant
subsets:
  - addresses:
      - ip: 192.168.40.200
    ports:
      - name: http
        port: 8123
        protocol: TCP
